<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="0dp"/>

        <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_marginTop="0dp"
                android:focusable="false"
                android:src="@mipmap/logo"
                android:focusableInTouchMode="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"
                style="@style/Widget.TextInputLayout"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_input_edit"
                    style="@style/Widget.TextEdit"
                    android:hint="@string/username_hint"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                style="@style/Widget.TextInputLayout"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_input"
                app:passwordToggleTint="@color/color_input_hint">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_input_edit"
                    style="@style/Widget.TextEdit"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_label"
                android:gravity="center"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/btn_login"
        />
        <ProgressBar
                android:id="@+id/login_bar"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>