...
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="company_hint">Company</string>
    <string name="username_hint">Username</string>
    <string name="student_hint">Student</string>
...
